--- a/app/src/main/res/layout/options_genre.xml
+++ b/app/src/main/res/layout/options_genre.xml
@@ -10,31 +10,31 @@
 
     <ImageView
         android:id="@+id/avatar_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="105dp"
+        android:layout_height="96dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:src="@drawable/photo_5390872891165360910_y"
         app:layout_constraintBottom_toTopOf="@+id/gridLayout"
         app:layout_constraintEnd_toStartOf="@+id/name_user"
-        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.672"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintVertical_bias="0.804" />
 
     <TextView
         android:id="@+id/name_user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="52dp"
         android:text="Diana Omarbayeva"
         android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/gridLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.533" />
+        app:layout_constraintVertical_bias="0.63" />
 
     <GridLayout
         android:id="@+id/gridLayout"
@@ -263,4 +263,17 @@
 
 
     </GridLayout>
+
+    <ImageView
+        android:id="@+id/profil"
+        android:layout_width="45dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_baseline_format_list_bulleted_24"
+        app:layout_constraintBottom_toTopOf="@+id/name_user"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.909"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
