--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -110,8 +110,8 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 android:background="@android:color/white"
-                android:textColor="@color/white"
-                android:text="Sign Up" />
+                android:text="Sign Up"
+                android:textColor="@color/white" />
         </RelativeLayout>
 
         <RelativeLayout
